[package]
name = "openai_problem_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.18"
tokio = { version = "1.31.0", features = ["full"] }
serde_json = "1.0.104"
log = "0.4.20"
simple_logger = "4.2.0"
colored="2.0.4"
dialoguer = "0.10.4"